<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myText"
            type="com.example.android.aboutme.MyName" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/nickname_edit"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/what_is_your_nickname"
                android:inputType="textPersonName|textImeMultiLine" />

            <TextView
                android:id="@+id/textHidden"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:text="@={myText.hidden}"
                android:visibility="gone" />

            <Button
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/button_label" />

            <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:contentDescription="@string/yellow_star"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="418dp">


                <TextView
                    android:id="@+id/bio_text"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/bio"
                    android:textSize="20sp" />
            </ScrollView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>